2005-12-16  Brian Gough  <bjg@network-theory.co.uk>

	* rng.c (gsl_rng_uniform_int): catch the case n = 0 and return an
	error

2003-07-23  Brian Gough  <bjg@network-theory.co.uk>

	* file.c: added fwrite/fread functions

2003-06-12  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am: removed benchmark programs from default build

2003-06-02  Brian Gough  <bjg@network-theory.co.uk>

	* waterman14.c: increased RAND_MIN to 1

	* lecuyer21.c: corrections to RAND_MIN, RAND_MAX, floating point
	denominator and seeding modulus

	* fishman20.c (ran_get): use schrage multiplication to avoid
	overflow

	* coveyou.c: corrected value of RAND_MIN to 1 and RAND_MAX to 2^32-1

	* borosh13.c: increased RAND_MIN to 1

	* knuthran2.c (ran_get): use schrage multiplication to avoid
	overflow in intermediate results

	* fishman2x.c (ran_get): use schrage multiplication to avoid
	overflow in intermediate results

	* fishman18.c (ran_get): use schrage multiplication to avoid
	overflow in intermediate results

	* schrage.c (schrage): utility functions for multiplication of
	long integers

	* test.c (main): updated incorrect test values for
	gsl_rng_fishman18 gsl_rng_fishman2x gsl_rng_knuthran2

Mon Nov 25 19:27:10 2002  Brian Gough  <bjg@network-theory.co.uk>

	* taus.c (taus2_set): fixed bug in seeding for s3 (test should be
 	for s3<16, not s3<8)

Sun Nov  3 14:40:43 2002  Brian Gough  <bjg@network-theory.co.uk>

	* taus.c (taus2_set): fixed bug in seeding for s2 < 8

Mon Jun 17 21:04:10 2002  Brian Gough  <bjg@network-theory.co.uk>

	* mt.c (mt_set): ensure state counter mti is initialised by
 	seeding routine

Wed May 29 21:52:11 2002  Brian Gough  <bjg@network-theory.co.uk>

	* randu.c: removed unused variable m

Tue May  7 22:34:52 2002  Brian Gough  <bjg@network-theory.co.uk>

	* mt.c (mt_1999_set): updated seeding procedure according to new
 	release of MT19937 from the original authors.

Fri Apr 26 21:17:05 2002  Brian Gough  <bjg@network-theory.co.uk>
