@@ -1,3 +1,7 @@
+2006-02-19  Brian Gough  <bjg@network-theory.co.uk>
+
+	* rng.c: added note about why range=max-min not max-min+1
+
 2005-12-16  Brian Gough  <bjg@network-theory.co.uk>
 
 	* rng.c (gsl_rng_uniform_int): catch the case n = 0 and return an
